--- a/documentation/gradle.properties
+++ b/documentation/gradle.properties
@@ -2,5 +2,6 @@ saxonVersion=12.5
 xmlResolverVersion=6.0.10
 xslTNGversion=2.5.0
 
-refVersion=3.0.0-alpha1
-guideVersion=3.0.0-alpha1
+# These default to the product version
+#refVersion=3.0.0-alpha1
+#guideVersion=3.0.0-alpha1
