--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,9 @@ kotlin.code.style=official
 kotlin.daemon.jvmargs=-Xmx6g
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=1024m -Xmx6g -Dfile.encoding=UTF-8
 
+saxonVersion=12.5
+xmlResolverVersion=6.0.10
+
 xmlcalabashGroup=com.xmlcalabash
 xmlcalabashVersion=3.0.0-alpha3
 // name is defined in settings.gradle.kts
