Resolved remaining p:validate-with-json-schema test failures

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,9 +21,10 @@ brotliDec=0.1.2
 tukaaniXz=1.10
 flexmarkAll=0.64.8
 uuidCreator=6.0.0
-jsonSchemaValidator=1.4.0
+jsonSchemaValidator=1.5.4
 sinclude=5.2.4
 jing=20220510
 xmlResolver=6.0.10
 slf4j=2.0.13
 httpClient=5.3.1
+graalvmJS=23.1.5
