Refactored logging-related configuration
Switched to the logback logging backend. Changed the Verbosity enumeration.
Changed the --debug option so that it enables logging output on the backend.
Made xercesImpl a reported dependency.

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,7 @@ jsonSchemaValidator=1.5.4
 sinclude=5.2.4
 jing=20220510
 xmlResolver=6.0.10
-slf4j=2.0.13
+slf4j=2.0.16
 httpClient=5.3.1
 graalvmJS=23.1.5
+xercesImpl=2.12.2
