--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ builtBy=Norm Tovey-Walsh
 
 // Versions of third party libraries
 saxonVersion=12.5
-schxslt=1.9.5
+schxslt2=1.3
 htmlparser=1.4.16
 commonsCodec=1.17.0
 commonsCompress=1.27.1
