--- a/gradle.properties
+++ b/gradle.properties
@@ -13,19 +13,24 @@ builtBy=Norm Tovey-Walsh
 
 // Versions of third party libraries
 saxonVersion=12.5
-schxslt2=1.3.1
-htmlparser=1.4.16
+
+brotliDec=0.1.2
 commonsCodec=1.17.0
 commonsCompress=1.27.1
-brotliDec=0.1.2
-tukaaniXz=1.10
+drewnoakesExtractor=2.19.0
+epubcheck=5.0.1
 flexmarkAll=0.64.8
-uuidCreator=6.0.0
-jsonSchemaValidator=1.5.4
-sinclude=5.2.4
-jing=20241231
-xmlResolver=6.0.10
-slf4j=2.0.16
-httpClient=5.3.1
 graalvmJS=23.1.5
+htmlparser=1.4.16
+httpClient=5.3.1
+jaxbapi=2.3.1
+jing=20241231
+jsonSchemaValidator=1.5.4
+pdfbox=2.0.32
+schxslt2=1.3.1
+sinclude=5.2.4
+slf4j=2.0.16
+tukaaniXz=1.10
+uuidCreator=6.0.0
 xercesImpl=2.12.2
+xmlResolver=6.0.10
