--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 .gradle/
 build/
-lib/
+/lib/
+/documentation/lib/
+/paged-media/**/lib/
+/test-driver/lib/
+/xmlcalabash/lib/
+saxon-license.lic
 .#*
