--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,9 @@ kotlin.code.style=official
 kotlin.daemon.jvmargs=-Xmx6g
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=1024m -Xmx6g -Dfile.encoding=UTF-8
 
+# Also fix buildSrc/gradle.properties!
 saxonVersion=12.5
-xmlResolverVersion=6.0.11
+xslTNGversion=2.5.0
 
 xmlcalabashGroup=com.xmlcalabash
 xmlcalabashVersion=3.0.0-alpha18-SNAPSHOT
@@ -33,7 +34,7 @@ slf4j=2.0.16
 tukaaniXz=1.10
 uuidCreator=6.0.0
 xercesImpl=2.12.2
-xmlResolver=6.0.10
+xmlResolver=6.0.12
 jacksonDataformat=2.18.2
 plantUml=1.2025.0
 jeuclidCore=3.1.14
