--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -124,6 +124,7 @@ jobs:
             app/build/distributions/xmlcalabash-${{ env.CI_TAG }}.zip
             ext/epubcheck/build/distributions/epubcheck-${{ env.CI_TAG }}.zip
             ext/polyglot/build/distributions/polyglot-${{ env.CI_TAG }}.zip
+            ext/diagramming/build/distributions/diagramming-${{ env.CI_TAG }}.zip
             ext/railroad/build/distributions/railroad-${{ env.CI_TAG }}.zip
 
       # N.B. This is **only** publishing the SNAPSHOT builds on the main branch
