Simplify messages; build the test-report for PRs

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -95,5 +95,5 @@ jobs:
 
       - name: Build and test XML Calabash
         run: |
-          ./gradlew --info test
-          ./gradlew --warning-mode all release
+          ./gradlew test test-driver:test-report
+          ./gradlew release
