--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -116,8 +116,8 @@ jobs:
 
       - name: Build and test XML Calabash
         run: |
-          ./gradlew --info test
-          ./gradlew --warning-mode all release
+          ./gradlew test
+          ./gradlew release
 
       - name: Build the test report
         run: |
