Added a general configuration SPI; reworked a bunch of SPI details

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,7 @@ builtBy=Norm Tovey-Walsh
 // Versions of third party libraries
 saxonVersion=12.5
 
+activation=1.1.1
 brotliDec=0.1.2
 commonsCodec=1.17.0
 commonsCompress=1.27.1
