--- a/.github/workflows/branch.yml
+++ b/.github/workflows/branch.yml
@@ -143,6 +143,7 @@ jobs:
             ext/diagramming/build/distributions/diagramming-${{ env.CI_TAG }}.zip
             ext/railroad/build/distributions/railroad-${{ env.CI_TAG }}.zip
             ext/rdf/build/distributions/rdf-${{ env.CI_TAG }}.zip
+            ext/xmlunit/build/distributions/xmlunit-${{ env.CI_TAG }}.zip
 
       # N.B. This is **only** publishing the SNAPSHOT builds on the main branch
       - name: Publish to Sonatype
