--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ saxonVersion=12.5
 xslTNGversion=2.5.0
 
 xmlcalabashGroup=com.xmlcalabash
-xmlcalabashVersion=3.0.0-alpha21
+xmlcalabashVersion=3.0.0-alpha22-SNAPSHOT
 // name is defined in settings.gradle.kts
 
 builtBy=Norm Tovey-Walsh
