Change to alpha23-SNAPSHOT; bump NineML to 3.2.9

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ saxonVersion=12.5
 xslTNGversion=2.5.0
 
 xmlcalabashGroup=com.xmlcalabash
-xmlcalabashVersion=3.0.0-alpha22
+xmlcalabashVersion=3.0.0-alpha23-SNAPSHOT
 // name is defined in settings.gradle.kts
 
 builtBy=Norm Tovey-Walsh
@@ -48,5 +48,5 @@ rr=2.1
 xmlunit=2.10.0
 markupBlitz=1.6
 selenium=4.28.1
-nineml=3.2.7
+nineml=3.2.9
 ebnfConvert=0.70
