--- a/gradle.properties
+++ b/gradle.properties
@@ -24,6 +24,7 @@ commonsCompress=1.27.1
 drewnoakesExtractor=2.19.0
 epubcheck=5.0.1
 flexmarkAll=0.64.8
+fop=2.10
 graalvmJS=23.1.5
 htmlparser=1.4.16
 httpClient=5.3.1
@@ -32,7 +33,7 @@ jing=20241231
 jsonSchemaValidator=1.5.4
 pdfbox=2.0.32
 schxslt2=1.3.1
-sinclude=5.2.4
+sinclude=5.3.0
 slf4j=2.0.16
 tukaaniXz=1.10
 uuidCreator=6.0.0
