--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ org.gradle.jvmargs=-XX:MaxMetaspaceSize=1024m -Xmx6g -Dfile.encoding=UTF-8
 
 # Also fix buildSrc/gradle.properties!
 saxonVersion=12.5
+docbookVersion=5.2
 xslTNGversion=2.5.0
 
 xmlcalabashGroup=com.xmlcalabash
