--- a/gradle.properties
+++ b/gradle.properties
@@ -29,6 +29,7 @@ htmlparser=1.4.16
 httpClient=5.3.1
 jaxbapi=2.3.1
 jing=20241231
+jsonPatch=1.13
 jsonSchemaValidator=1.5.4
 pdfbox=2.0.32
 schxslt2=1.3.1
