--- a/gradle.properties
+++ b/gradle.properties
@@ -30,7 +30,9 @@ httpClient=5.3.1
 jaxbapi=2.3.1
 jing=20241231
 jsonPatch=1.13
+jsonPath=2.9.0
 jsonSchemaValidator=1.5.4
+jsonSmart=2.5.1
 pdfbox=2.0.32
 schxslt2=1.3.1
 sinclude=5.3.0
