--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ docbookVersion=5.2
 xslTNGversion=2.5.0
 
 xmlcalabashGroup=com.xmlcalabash
-xmlcalabashVersion=3.0.0-beta2
+xmlcalabashVersion=3.0.0-beta3-SNAPSHOT
 // name is defined in settings.gradle.kts
 
 builtBy=Norm Tovey-Walsh
