--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ kotlin.daemon.jvmargs=-Xmx6g
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=1024m -Xmx6g -Dfile.encoding=UTF-8
 
 # Also fix buildSrc/gradle.properties!
-saxonVersion=12.6
+saxonVersion=12.7
 docbookVersion=5.2
 xslTNGversion=2.5.0
 
 xmlcalabashGroup=com.xmlcalabash
-xmlcalabashVersion=3.0.0-beta3-SNAPSHOT
+xmlcalabashVersion=3.0.0-beta3
 // name is defined in settings.gradle.kts
 
 builtBy=Norm Tovey-Walsh
