--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ docbookVersion=5.2
 xslTNGversion=2.5.0
 
 xmlcalabashGroup=com.xmlcalabash
-xmlcalabashVersion=3.0.0-beta4-SNAPSHOT
+xmlcalabashVersion=3.0.0-beta4
 // name is defined in settings.gradle.kts
 
 builtBy=Norm Tovey-Walsh
@@ -40,7 +40,7 @@ slf4j=2.0.16
 tukaaniXz=1.10
 uuidCreator=6.0.0
 xercesImpl=2.12.2
-xmlResolver=6.0.16
+xmlResolver=6.0.17
 jacksonDataformat=2.18.2
 plantUml=1.2025.0
 jeuclidCore=3.1.14
