--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ xslTNGversion=2.5.0
 schxslt2=1.3.1
 
 xmlcalabashGroup=com.xmlcalabash
-xmlcalabashVersion=3.0.0-beta7-SNAPSHOT
+xmlcalabashVersion=3.0.0-beta7
 // name is defined in settings.gradle.kts
 
 builtBy=Norm Tovey-Walsh
